--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Авторские статьи | [Имя друга]</title>
+    <title>Сайт школы "Путь древа жизни"</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
@@ -17,11 +17,22 @@
                     <i class="fas fa-pen-nib"></i>
                     <span>Авторский блог</span>
                 </a>
-                <nav class="nav">
-                    <a href="index.html" class="nav-link active">Главная</a>
-                    <a href="#articles" class="nav-link">Статьи</a>
-                    <a href="#about" class="nav-link">Об авторе</a>
-                    <a href="#contact" class="nav-link">Контакты</a>
+               <nav class="nav">
+                    <a href="index.html" class="nav-link active">
+                        <i class="fas fa-home"></i> Главная
+                    </a>
+                    <a href="school.html" class="nav-link">
+                        <i class="fas fa-school"></i> О школе
+                    </a>
+                    <a href="articles.html" class="nav-link">
+                        <i class="fas fa-newspaper"></i> Статьи
+                    </a>
+                    <a href="videos.html" class="nav-link">
+                        <i class="fas fa-video"></i> Видео
+                    </a>
+                    <a href="contacts.html" class="nav-link">
+                        <i class="fas fa-envelope"></i> Контакты
+                    </a>
                 </nav>
                 <button id="themeToggle" class="theme-toggle">
                     <i class="fas fa-moon"></i>
